Fix livedock collapse

--- a/app/components-react/windows/Main.m.less
+++ b/app/components-react/windows/Main.m.less
@@ -44,6 +44,8 @@
   grid-template-rows: minmax(0, 1fr) 48px;
   position: relative;
   height: 100%;
+  width: auto;
+  min-width: 0;
 }
 
 .titlebar--error {
@@ -72,6 +74,8 @@
   display: flex;
   position: relative;
   grid-row: 1 / span 1;
+  min-width: 0;
+  min-height: 0;
 }
 
 .main-loading {
